# Advent-of-Rust-

./: .gitignore  Cargo.toml  \  justfile  perf.data  perf.data.old
.cargo/: config.toml  perf.data
benches/: day4_bench.rs  day8_bench.rs
src/: lib.rs  main.rs
src/util/: grid.rs  math.rs  mod.rs  point.rs
src/year2023/: day1.rs  day10.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  mod.rs
src/year2025/: .rustc_info.json  day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs
