[package]
name = "aoc-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
bitvec = "1.0.1"
criterion = "0.8.0"
itertools = "0.14.0"
rayon = "1.11.0"
rustc-hash = "2.1.1"
z3 = { version = "0", features = ["gh-release"] }

[[bench]]
name = "day8_bench"
harness = false

[profile.release]
debug = "line-tables-only"
opt-level = 3
panic = "abort"
lto = "fat"
codegen-units = 1
strip = true
